# MLFS

./: LICENSE  README.md  pyproject.toml  setup.cfg
mlfs/: __init__.py  dectree.py  knn.py  linreg.py  logreg.py  naivebayes.py  pca.py  perceptron.py  plotprops.py  randforest.py  svm.py  test-knn.py
mlfs/knn/: knn.py
scripts/: template-mlfs-test.py  test-classes.py  test-dectree.py  test-knn.py  test-linreg.py  test-logreg.py  test-naivebayes.py  test-pca.py  test-perceptron.py  test-randforest.py  test-svm.py
