[metadata]
name = mlfs-scepticalrabbit
version = 0.0.01
author = ScepticalRabbit
author_email = thescepticalrabbit@gmail.com
description = A package for machine learning from scratch (MLFS) 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ScepticalRabbit/MLFS
project_urls =
    Bug Tracker = https://github.com/ScepticalRabbit/MLFS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = mlfs
packages = find:
python_requires = >=3.6

[options.packages.find]
where = mlfs

